updated open on new tabs

--- a/templates/portfolio/base.html
+++ b/templates/portfolio/base.html
@@ -36,13 +36,22 @@
                         aria-current="page" href="{% url 'projects' %}">Projects</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" aria-label="Resume" href="{% static 'media/philonglai-resume.pdf' %}">Resume</a>
+                        <a class="nav-link" target="_blank" rel="noopener noreferrer" 
+                        aria-label="Resume" href="{% static 'media/philonglai-resume.pdf' %}">
+                          Resume
+                        </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" aria-label="LinkedIn" href="https://www.linkedin.com/in/long-lai-454877180/">LinkedIn</a>
+                        <a class="nav-link" target="_blank" rel="noopener noreferrer" 
+                        aria-label="LinkedIn" href="https://www.linkedin.com/in/long-lai-454877180/">
+                          LinkedIn
+                        </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" aria-label="GitHub" href="https://github.com/lpl-5664">GitHub</a>
+                        <a class="nav-link" target="_blank" rel="noopener noreferrer" 
+                        aria-label="GitHub" href="https://github.com/lpl-5664">
+                          GitHub
+                        </a>
                       </li>
                     </ul>
                 </div>
